--- a/estetica.html
+++ b/estetica.html
@@ -108,7 +108,7 @@
     <main>
         <section id="cover">
             <picture>
-                <img src="/immagini/estetica personaggio/banner3.jpg" alt="Banner Foto Estetica">
+                <img src="immagini/estetica personaggio/banner3.jpg" alt="Banner Foto Estetica">
             </picture>
         </section>
 
